# registries

./: CMakeLists.txt  build.sh  readme.md
cmake_modules/: CodeQuality.cmake  OutOfSourceCheck.cmake
code/: CMakeLists.txt
code/service/: CMakeLists.txt  Callback.cpp  Registry.cpp  RegistryImpl.cpp  Service.cpp  ServiceList.cpp  StandardPayload.cpp  Status.cpp  TokenPayload.cpp  TxnStandardPayloadAdapter.cpp  TxnStatusAdapter.cpp  TxnTokenPayloadAdapter.cpp
code/service/include/: RegistryImpl.h  TxnStandardPayloadAdapter.h  TxnStatusAdapter.h  TxnTokenPayloadAdapter.h
code/service/include/svc/: Callback.h  ICallbackWrapper.h  IRegistry.h  IStandardWrapper.h  ITokenWrapper.h  Payload.h  Registry.h  Service.h  ServiceList.h  StandardPayload.h  Status.h  TokenPayload.h
code/service/test/: CMakeLists.txt  ExampleServices.cpp  ExampleServices.h  test_adapters.cpp  test_direct_registry.cpp  test_indirect_registry.cpp  test_payloads.cpp  test_registry.cpp  test_status.cpp
code/transaction/: CMakeLists.txt  Registry.cpp  RegistryImpl.cpp  Service.cpp  StandardPayload.cpp  StandardService.cpp  Status.cpp  TokenPayload.cpp  TokenService.cpp
code/transaction/include/: RegistryImpl.h
code/transaction/include/txn/: IRegistry.h  IStandardWrapper.h  ITokenWrapper.h  Registry.h  Service.h  StandardPayload.h  StandardService.h  Status.h  TokenPayload.h  TokenService.h
code/transaction/test/: CMakeLists.txt  ExampleServices.cpp  ExampleServices.h  main.cpp  test_direct_registry.cpp  test_indirect_registry.cpp  test_status.cpp
